fix spacing on login screen

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -129,6 +129,12 @@
     margin: 10px 0;
     font-size: 16px;
   }
+
+  .login-input{
+    margin: 12px 0px;
+  }
+
+  
   /* --- Button Styles --- */
   .button {
     cursor: pointer;
@@ -140,15 +146,22 @@
     border: none;
     border-radius: 7px;
   }
-
+  
   .button-login {
     background-color: #1877f2;
+  }
+  
+  .forget-password{ 
+    font-size: 12px;
+    color: #1877f2;
   }
 
   .button-signup {
     width: 200px;
     background-color:  #42b72a;
   }
+
+  .button-or{ font-size: small;}
 
   /* --- Input Styles --- */
   .input{
